Tag de fechamento da tag section corrigida na index view de lotes

--- a/app/views/lots/index.html.erb
+++ b/app/views/lots/index.html.erb
@@ -29,7 +29,7 @@
     <% else %>
       <p class='text-neutral-300'><%= t '.approved_progress_not_found_message' %></p>
     <% end %>
-  </div>
+  </section>
 
   <section id='lots-waiting-start' class='w-1/2 flex flex-col gap-4'>
     <h2 class='view-subtitle'><%= t '.approved_waiting_subtitle' %></h2>
@@ -43,5 +43,5 @@
     <% else %>
       <p class='text-neutral-300'><%= t '.approved_waiting_not_found_message' %></p>
     <% end %>
-  </div>
+  </section>
 </div>
