--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -6,11 +6,7 @@
   <% end %>
 </div>
 
-<div>
-  <h2 class='mb-4 py-2 text-neutral-600 text-lg text-center font-semibold'>
-    <%= t '.linked_products' %>
-  </h2>
-
+<div class='flex flex-col gap-4'>
   <% if @category.products.any? %>
     <% @category.products.each do |product| %>
       <%= link_to product_path(product), class: 'p-4 flex flex-col gap-2 bg-secondary hover:scale-105 transition-all rounded' do %>
