--- a/app/views/lots/new.html.erb
+++ b/app/views/lots/new.html.erb
@@ -32,20 +32,20 @@
 
   <div class='flex gap-4'>
     <div class='form-field w-full'>
-      <%= f.label :min_bid_in_centavos %>
-      <%= f.text_field :min_bid_in_centavos %>
+      <%= f.label :min_bid_in_reais %>
+      <%= f.number_field :min_bid_in_reais, placeholder: t('.value_placeholder') %>
 
-      <% if @lot.errors[:min_bid_in_centavos].any? %>
-        <span class='errors'><%= @lot.errors[:min_bid_in_centavos].join(', ') %></span>
+      <% if @lot.errors[:min_bid_in_reais].any? %>
+        <span class='errors'><%= @lot.errors[:min_bid_in_reais].join(', ') %></span>
       <% end %>
     </div>
 
     <div class='form-field w-full'>
-      <%= f.label :min_diff_between_bids_in_centavos %>
-      <%= f.text_field :min_diff_between_bids_in_centavos %>
+      <%= f.label :min_diff_between_bids_in_reais %>
+      <%= f.number_field :min_diff_between_bids_in_reais, placeholder: t('.value_placeholder') %>
 
-      <% if @lot.errors[:min_diff_between_bids_in_centavos].any? %>
-        <span class='errors'><%= @lot.errors[:min_diff_between_bids_in_centavos].join(', ') %></span>
+      <% if @lot.errors[:min_diff_between_bids_in_reais].any? %>
+        <span class='errors'><%= @lot.errors[:min_diff_between_bids_in_reais].join(', ') %></span>
       <% end %>
     </div>
   </div>
