--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <h2 class='view-title text-primary'><%= t '.sign_up' %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'm-auto' }) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'm-auto max-w-[562px] flex flex-col' }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field form-field">
