Testes de sistema relacionados aos lotes refatorados

--- a/app/views/lots/index.html.erb
+++ b/app/views/lots/index.html.erb
@@ -21,7 +21,7 @@
 
 <h1 class='view-title'><%= t '.approved_title' %></h1>
 
-<div class='flex gap-12'>
+<section id='lots-approved' class='flex gap-12'>
   <section id='lots-in-progress' class='w-1/2 flex flex-col gap-4'>
     <h2 class='view-subtitle'><%= t '.approved_progress_subtitle' %></h2>
     
@@ -49,4 +49,4 @@
       <p class='text-neutral-300'><%= t '.approved_waiting_not_found_message' %></p>
     <% end %>
   </section>
-</div>
+</section>
