--- a/app/views/lots/index.html.erb
+++ b/app/views/lots/index.html.erb
@@ -3,7 +3,7 @@
   <%= f.submit 'Pesquisar', class: 'w-min form-submit' %>
 <% end %>
 
-<% if user_signed_in? && current_user.is_admin %>
+<% if user_signed_in? && user_is_admin? %>
   <section id='lots-awaiting-approval' class='flex flex-col gap-4'>
     <h1 class='view-title'><%= t '.awaiting_approval_title' %></h1>
 
