--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,7 +1,7 @@
 <div class='my-6 flex items-center justify-between'>
   <h1 class='view-title my-0'><%= @category.name %></h1>
 
-  <% if current_user.present? && current_user.is_admin %>
+  <% if user_signed_in? && user_is_admin? %>
     <%= button_to t('.remove_button_text'), false, class: 'p-2 bg-red-400 text-white rounded' %>
   <% end %>
 </div>
