--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,24 +5,24 @@
 
   <div class="field form-field">
     <%= f.label :name %>
-    <%= f.text_field :name, autofocus: true %>
+    <%= f.text_field :name, placeholder: t('.name_placeholder'), autofocus: true %>
   </div>
 
   <div class="field form-field">
     <%= f.label :cpf %>
-    <%= f.number_field :cpf %>
+    <%= f.number_field :cpf, placeholder: t('.cpf_placeholder') %>
   </div>
 
   <div class="field form-field">
     <%= f.label :email %>
-    <%= f.email_field :email, autocomplete: "email" %>
+    <%= f.email_field :email, placeholder: t('.email_placeholder'), autocomplete: "email" %>
   </div>
 
   <div class="field form-field">
     <div class='flex gap-1'>
       <%= f.label :password %>
       <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <em>(<%= t '.characters_minimum', number: @minimum_password_length %>)</em>
       <% end %>
     </div>
     <%= f.password_field :password, autocomplete: "new-password" %>
