Pequena correção no arquivo de tradução pt-BR e views relacionadas a lotes

--- a/app/views/lots/won.html.erb
+++ b/app/views/lots/won.html.erb
@@ -8,6 +8,6 @@
       <% end %>
     <% end %>
   <% else %>
-    <p class='text-neutral-300'><%= t '.won_title_not_found_message' %></p>
+    <p class='text-neutral-300'><%= t '.not_found_messages' %></p>
   <% end %>
 </section>
