--- a/app/views/lots/expired.html.erb
+++ b/app/views/lots/expired.html.erb
@@ -4,7 +4,10 @@
   <% if @expired_lots.present? %>
     <% @expired_lots.each do |lot| %>
       <%= link_to lot_path(lot), class: 'p-4 bg-secondary hover:scale-105 transition-all rounded' do %>
-        <%= t '.prefix' %> <%= lot.code %>
+        <div class='flex flex-col gap-2'>
+          <span><%= t '.prefix' %> <%= lot.code %></span>
+          <span class='text-xs italic'><%= lot.get_creator_description %></span>
+        </div>
       <% end %>
     <% end %>
   <% else %>
@@ -18,7 +21,10 @@
   <% if @closed_expired_lots.present? %>
     <% @closed_expired_lots.each do |lot| %>
       <%= link_to lot_path(lot), class: 'p-4 bg-secondary hover:scale-105 transition-all rounded' do %>
-        <%= t '.prefix' %> <%= lot.code %>
+        <div class='flex flex-col gap-2'>
+          <span><%= t '.prefix' %> <%= lot.code %></span>
+          <span class='text-xs italic'><%= lot.get_creator_description %></span>
+        </div>
       <% end %>
     <% end %>
   <% else %>
