--- a/app/views/lots/index.html.erb
+++ b/app/views/lots/index.html.erb
@@ -10,7 +10,10 @@
     <% if @awaiting_approval_lots.present? %>
       <% @awaiting_approval_lots.each do |lot| %>
         <%= link_to lot_path(lot), class: 'p-4 bg-secondary hover:scale-105 transition-all rounded' do %>
-          <%= t '.prefix' %> <%= lot.code %>
+          <div class='flex flex-col gap-2'>
+            <span><%= t '.prefix' %> <%= lot.code %></span>
+            <span class='text-xs italic'><%= lot.get_creator_description %></span>
+          </div>
         <% end %>
       <% end %>
     <% else %>
@@ -28,7 +31,10 @@
     <% if @approved_lots_in_progress.present? %>
       <% @approved_lots_in_progress.each do |lot| %>
         <%= link_to lot_path(lot), class: 'p-4 bg-secondary hover:scale-105 transition-all rounded' do %>
-          <%= t '.prefix' %> <%= lot.code %>
+          <div class='flex flex-col gap-2'>
+            <span><%= t '.prefix' %> <%= lot.code %></span>
+            <span class='text-xs italic'><%= lot.get_creator_description %></span>
+          </div>
         <% end %>
       <% end %>
     <% else %>
@@ -42,7 +48,10 @@
     <% if @approved_lots_waiting_start.present? %>
       <% @approved_lots_waiting_start.each do |lot| %>
         <%= link_to lot_path(lot), class: 'p-4 bg-secondary hover:scale-105 transition-all rounded' do %>
-          <%= t '.prefix' %> <%= lot.code %>
+          <div class='flex flex-col gap-2'>
+            <span><%= t '.prefix' %> <%= lot.code %></span>
+            <span class='text-xs italic'><%= lot.get_creator_description %></span>
+          </div>
         <% end %>
       <% end %>
     <% else %>
