--- a/app/views/lots/index.html.erb
+++ b/app/views/lots/index.html.erb
@@ -12,7 +12,7 @@
         <%= link_to lot_path(lot), class: 'p-4 bg-secondary hover:scale-105 transition-all rounded' do %>
           <div class='flex flex-col gap-2'>
             <span><%= t '.prefix' %> <%= lot.code %></span>
-            <span class='text-xs italic'><%= lot.get_creator_description %></span>
+            <span class='text-xs italic'><%= lot.creator_description %></span>
           </div>
         <% end %>
       <% end %>
@@ -33,7 +33,7 @@
         <%= link_to lot_path(lot), class: 'p-4 bg-secondary hover:scale-105 transition-all rounded' do %>
           <div class='flex flex-col gap-2'>
             <span><%= t '.prefix' %> <%= lot.code %></span>
-            <span class='text-xs italic'><%= lot.get_creator_description %></span>
+            <span class='text-xs italic'><%= lot.creator_description %></span>
           </div>
         <% end %>
       <% end %>
@@ -50,7 +50,7 @@
         <%= link_to lot_path(lot), class: 'p-4 bg-secondary hover:scale-105 transition-all rounded' do %>
           <div class='flex flex-col gap-2'>
             <span><%= t '.prefix' %> <%= lot.code %></span>
-            <span class='text-xs italic'><%= lot.get_creator_description %></span>
+            <span class='text-xs italic'><%= lot.creator_description %></span>
           </div>
         <% end %>
       <% end %>
