--- a/app/views/lots/show.html.erb
+++ b/app/views/lots/show.html.erb
@@ -3,7 +3,7 @@
     <div>
       <h1 class='view-title my-0'><%= t '.title' %> <%= @lot.code %></h1>
       <div class='flex flex-col'>
-        <span><%= t '.creator_description' %> <%= @lot.get_creator_description %></span>
+        <span><%= t '.creator_description' %> <%= @lot.creator_description %></span>
       </div>
     </div>
   
@@ -88,12 +88,12 @@
       </div>
       
       <% if user_signed_in? %>
-        <% if !@lot.expired? && user_can_make_a_bid? %>
+        <% if !@lot.expired? && user_can_make_bid? %>
           <%= form_with url: lot_bids_path(@lot), class: 'flex flex-row' do |f| %>
             <%= f.number_field :value_in_reais, placeholder: 'Lance em reais' %>
             <%= f.submit t('.make_bid_button_text'), class: 'form-submit m-0' %>
           <% end %>
-        <% elsif !@lot.expired? && !user_can_make_a_bid? %>
+        <% elsif !@lot.expired? && !user_can_make_bid? %>
           <div class='px-4 py-2 flex items-center gap-2 text-black font-semibold bg-red-400 rounded'>
             <%= t '.bid_blocked_message' %>
           </div>
