--- a/app/views/lots/won.html.erb
+++ b/app/views/lots/won.html.erb
@@ -6,7 +6,7 @@
       <%= link_to lot_path(lot), class: 'p-4 bg-secondary hover:scale-105 transition-all rounded' do %>
         <div class='flex flex-col gap-2'>
           <span><%= t '.prefix' %> <%= lot.code %></span>
-          <span class='text-xs italic'><%= lot.get_creator_description %></span>
+          <span class='text-xs italic'><%= lot.creator_description %></span>
         </div>
       <% end %>
     <% end %>
