--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,10 +24,10 @@
           
           <% if user_signed_in? %>
             <% if user_is_admin? %>
-              <%= link_to "Bloquear CPF", blocked_cpfs_path, class: "btn-user-menu" %>
+              <%= link_to t('.block_unblock_cpf'), blocked_cpfs_path, class: "btn-user-menu" %>
             <% end %>
 
-            <%= link_to "Lotes Favoritos", favorite_lots_path, class: "btn-user-menu" %>
+            <%= link_to t('.favorite_lots'), favorite_lots_path, class: "btn-user-menu" %>
           <% end %>
         </div>
 
@@ -41,22 +41,17 @@
             <% end %>
 
             <span class="italic"><%= current_user.name %></span>
-            <%= link_to "Sair", destroy_user_session_path, data: { turbo_method: :delete }, class: "btn-user-menu" %>
+            <%= link_to t('.log_out'), destroy_user_session_path, data: { turbo_method: :delete }, class: "btn-user-menu" %>
           <% else %>
-            <%= link_to "Inscrever-se", new_user_registration_path, class: "btn-user-menu" %>
-            <%= link_to "Entrar", new_user_session_path, class: "btn-user-menu" %>
+            <%= link_to t('.sign_up'), new_user_registration_path, class: "btn-user-menu" %>
+            <%= link_to t('.log_in'), new_user_session_path, class: "btn-user-menu" %>
           <% end %>
         </div>
       </nav>
     </header>
 
     <main class="container m-auto py-6">
-      <% if flash[:notice] %>
-        <div class="notice"><%= notice %></div>
-      <% elsif flash[:alert] %>
-        <div class="alert"><%= alert %></div>
-      <% end %>
-
+      <%= render 'layouts/notice_alert' %>
       <%= yield %>
     </main>
   </body>
